# MUSK

./: .gitignore  README.md  demo.ipynb  pyproject.toml  requirements.txt
benchmarks/: .gitignore  demo.ipynb  models.txt
benchmarks/clip_benchmark/: cli.py
benchmarks/clip_benchmark/datasets/: builder.py  histopathology_datasets.py
benchmarks/clip_benchmark/metrics/: image_retrieval.py  linear_probe.py  zeroshot_classification.py  zeroshot_retrieval.py
benchmarks/clip_benchmark/models/: __init__.py  musk_modeling.py
musk/: __init__.py  demo.ipynb  modeling.py  utils.py
musk/assets/: note.txt
musk/torchscale/architecture/: encoder.py  utils.py
musk/torchscale/model/: BEiT3.py
pretrain/1_mask_pretrain/: .gitignore  README.md  engine_for_pretraining.py  modeling_musk.py  modeling_vqkd.py  optim_factory.py  run_pretraining.py  utils.py
pretrain/1_mask_pretrain/configs/: pretrain_musk_large.yaml
pretrain/1_mask_pretrain/datasets/: file_dataset.py  masking_generator.py  multimodal_dataset.py  musk_datasets.py  randstainna.py  transforms.py
pretrain/1_mask_pretrain/scripts/: run_pretrain.sh  zero2_config.json
pretrain/1_mask_pretrain/vqkd_teacher/: dino.py
pretrain/2_contrastive_pretrain/: README.md  engine_for_finetuning.py  mask_decoder.py  modeling_finetune.py  modeling_utils.py  optim_factory.py  run.py  utils.py
pretrain/2_contrastive_pretrain/dataset/: beit_datasets.py  datasets.py  file_dataset.py  masking_generator.py  randaug.py
pretrain/2_contrastive_pretrain/scripts/: train.sh
(+1 files in other folders)
